# python-project-50

./: README.md  pyproject.toml
gendiff/scripts/: gendiff.py
hexlet_code/scripts/: gendiff.py
